--- a/uniMon_supervisor.conf
+++ b/uniMon_supervisor.conf
@@ -18,3 +18,6 @@ command=/usr/bin/crontab /uniMon/crontab
 
 [program:grafana]
 command=/usr/sbin/grafana-server --homepath=/usr/share/grafana --config=/etc/grafana/grafana.ini cfg:default.paths.data=/var/lib/grafana cfg:default.paths.logs=/var/log/grafana
+
+[program:influxdb]
+command=/sbin/service influxdb start
