--- a/uniMon_supervisor.conf
+++ b/uniMon_supervisor.conf
@@ -11,13 +11,16 @@ logfile_backups=10
 
 ## PostFix
 [program:postfix]
-command=/sbin/service postfix start
+#command=/sbin/service postfix start
+command=/usr/sbin/postfix start
 
 [program:crontab]
 command=/usr/bin/crontab /uniMon/crontab
 
 [program:grafana]
-command=/usr/sbin/grafana-server --homepath=/usr/share/grafana --config=/etc/grafana/grafana.ini cfg:default.paths.data=/var/lib/grafana cfg:default.paths.logs=/var/log/grafana
+#command=/sbin/service grafana start
+command=su -s /bin/sh -c "/usr/sbin/grafana-server --homepath=/usr/share/grafana --config=/etc/grafana/grafana.ini cfg:default.paths.data=/var/lib/grafana cfg:default.paths.logs=/var/log/grafana >>/dev/null" grafana
 
 [program:influxdb]
-command=/sbin/service influxdb start
+#command=/sbin/service influxdb start
+command=su -s /bin/sh -c "/usr/bin/influxd -config /etc/influxdb/influxdb.conf >>/var/log/influxdb/influxd.log 2>&1" influxdb
